# pdf-chunk-search

./: .gitignore  AGENTS.md  README.md  chat_rag.py  chunk_search.py  chunker.py  clean_pdf.py  pdf_chunker.py  pdf_extractor.py  pyproject.toml  requirements.txt
_output_opera/: output_llama_chunks.txt
law/: law_chunks.txt  law_chunks_initial.txt  law_chunks_semantic_search.txt  law_embeddings.npy  law_extracted.txt
old/: chunker copy.py  pdf_chunker copy.py
opera/: opera_chunks.txt  opera_embeddings.npy
output/: output_chunks.txt  output_embeddings.npy  output_langchain_chunks.txt  output_llama_chunks.txt  output_llama_extracted.txt  output_sentence_chunks.txt  output_smart_chunks.txt
output_opera/: output_sentence_chunks.txt
rag_module/: __init__.py  embeddings.py  formatting.py  loader.py  search.py
tests/: test_pipeline.py
