[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-module"
version = "0.1.0"
description = "Shared RAG utilities for chunk loading, search, and prompt formatting"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "faiss-cpu>=1.7.0",
    "mlx-embeddings>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["rag_module*"]
exclude = ["tests*", "examples*"]
